<resources>
    <string name="app_name">MyCalculator</string>
    <string name="_0">0</string>
    <string name="ON">ON</string>
    <string name="_7">7</string>
    <string name="DEL">DEL</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="off">OFF</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_num0">0</string>
    <string name="ac">AC</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
</resources>